--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(coef,lasso)
 S3method(plot,LAR)
+S3method(plot,stepwise_selection)
 S3method(predict,ridge)
 S3method(print,LAR)
+S3method(print,stepwise_selection)
 export(regmodel)
