--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ S3method(coef,LAR)
 S3method(coef,lasso)
 S3method(coef,ridge)
 S3method(plot,LAR)
+S3method(plot,ridge)
 S3method(plot,stepwise_selection)
 S3method(predict,LAR)
 S3method(predict,lasso)
 S3method(predict,ridge)
 S3method(print,LAR)
+S3method(print,lasso)
+S3method(print,ridge)
 S3method(print,stepwise_selection)
 export(regmodel)
