Various fixes for devtools::check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,20 @@ S3method(print,lasso)
 S3method(print,ridge)
 S3method(print,stepwise_selection)
 export(regmodel)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_smooth)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,lm.fit)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix.lm)
+importFrom(stats,model.response)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
