--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Jonas", "Veit", , "mee322@uni-heidelberg.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Implements common penalty based estimation methods i.e Ridge, Lasso, Forward selection, Backward selection and Least angle regresion
+Description: Implements common penalty based estimation methods i.e Ridge, 
+    Lasso, Forward selection, Backward selection and Least angle regresion.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -15,3 +16,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Imports:
+    tidyr,
+    ggplot2
