Added Model description as well as references to regmodel manpage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,8 @@ S3method(print,lasso)
 S3method(print,ridge)
 S3method(print,stepwise_selection)
 export(regmodel)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix.lm)
+importFrom(stats,model.response)
