Implemented plot for lasso
Updated namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(coef,LAR)
 S3method(coef,lasso)
 S3method(coef,ridge)
 S3method(plot,LAR)
+S3method(plot,lasso)
+S3method(plot,ridge)
 S3method(plot,stepwise_selection)
 S3method(predict,LAR)
 S3method(predict,lasso)
@@ -23,6 +25,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
