cv Vignette and updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ S3method(predict,ridge)
 S3method(predict,stepwise_selection)
 S3method(print,LAR)
 S3method(print,lasso)
+S3method(print,lasso_cv)
 S3method(print,ridge)
+S3method(print,ridge_cv)
 S3method(print,stepwise_selection)
 export(regmodel)
 importFrom(ggplot2,aes)
